# selection-text-aware

./: .gitattributes  Cargo.toml  oasin.theme-dark-plus-darcula-1.2.0.vsix  package.json
src/: lib.rs
